# RayTracer

./: CMakeLists.txt  Makefile  README.md  RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters
src/: CMakeLists.txt  camera.cpp  camera.h  hit.h  light.cpp  light.h  main.cpp  main.h  mainHelper.cpp  mainHelper.h  material.cpp  material.h  model.cpp  model.h  options.h  plane.cpp  plane.h  ray.h  scene.cpp  scene.h  simpleTexture.cpp  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h  tri.h
